@@ -271,6 +271,76 @@ function Addonvideo_create() {
         presenter.viewObject = null;
         presenter.video = null;
     };
+    
+    presenter.keyboardController = function(keycode) {
+
+        $(document).on('keydown', function(e) {
+            e.preventDefault();
+            $(this).off('keydown');
+        });
+
+        function increasedVolume() {
+        	var val = Math.round((presenter.videoObject.volume + 0.1)*10)/10;
+        	
+        	return val > 1 ? 1 : val;
+        }
+        
+        function decreasedVolume() {
+        	var val = Math.round((presenter.videoObject.volume - 0.1)*10)/10;
+        	
+        	return val < 0 ? 0 : val;
+        }
+        
+        function forward() {
+        	presenter.videoObject.currentTime += 15; 
+        }
+        
+        function backward() {
+        	presenter.videoObject.currentTime -= 15; 
+        }
+
+        function playPause() {
+            if (presenter.video.paused) {
+                presenter.play();
+            } else {
+                presenter.pause();
+            }
+        }
+
+        function fullScreen() {
+            if (presenter.videoObject.requestFullscreen) {
+                presenter.videoObject.requestFullscreen();
+            } else if (presenter.videoObject.mozRequestFullScreen) {
+                presenter.videoObject.mozRequestFullScreen();
+            } else if (presenter.videoObject.webkitRequestFullscreen) {
+                presenter.videoObject.webkitRequestFullscreen();
+            }
+        }
+
+        switch(keycode) {
+            case 32:
+                playPause();
+                break;
+            case 38:
+                presenter.videoObject.volume = increasedVolume();
+                break;
+            case 40:
+                presenter.videoObject.volume = decreasedVolume();
+                break;
+            case 37:
+                backward();
+                break;
+            case 39:
+                forward();
+                break;
+            case 27:
+                presenter.pause();
+                break;
+            case 70:
+                fullScreen();
+                break;
+        }
+    };
 
     presenter.run = function(view, model) {
         presenter.commandsQueue = CommandsQueueFactory.create(presenter);
