@@ -1,8 +1,4 @@
 package com.lorepo.icplayer.client.module.api;
 
 public interface IModuleView {
-<<<<<<< HEAD
-=======
-
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
 }
