@@ -24,8 +24,4 @@ public class CheckCounterView extends Label implements CheckCounterPresenter.IDi
 			setText("");
 		}
 	}
-<<<<<<< HEAD
-=======
-
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
 }
