@@ -53,8 +53,4 @@ public class ErrorCounterView extends Label implements ErrorCounterPresenter.IDi
 	public void hide() {
 		setVisible(false);
 	}
-<<<<<<< HEAD
-=======
-
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
 }
