@@ -172,8 +172,4 @@ public class ImageSourceView extends Image implements IDisplay {
 		getElement().getStyle().setLeft(initialLeft, Unit.PX);
 		getElement().getStyle().setTop(initialTop, Unit.PX);
 	}
-<<<<<<< HEAD
-=======
-
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
 }
