@@ -107,8 +107,4 @@ public class LessonResetView extends PushButton implements IDisplay {
 	public void setShowAnswersMode(boolean isShowAnswersMode) {
 		this.isShowAnswersMode = isShowAnswersMode;		
 	}
-<<<<<<< HEAD
-=======
-
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
 }
