@@ -237,8 +237,4 @@ public class SourceListView extends FlowPanel implements IDisplay{
 		setVisible(false);
 		refreshMath(getElement());
 	}
-<<<<<<< HEAD
-=======
-
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
 }
