@@ -203,4 +203,9 @@ public class InlineChoiceWidget extends ListBox implements TextElementDisplay{
 	public String getId() {
 		return choiceInfo.getId();
 	}
+
+	@Override
+	public void setFocusGap(boolean focus) {
+		setFocus(focus);
+	}
 }
