@@ -6,6 +6,7 @@ import java.util.List;
 
 import com.google.gwt.event.shared.HandlerRegistration;
 import com.google.gwt.user.client.Window;
+import com.google.gwt.user.client.ui.Widget;
 import com.lorepo.icf.scripting.ICommandReceiver;
 import com.lorepo.icf.scripting.ScriptParserException;
 import com.lorepo.icf.scripting.ScriptingEngine;
@@ -41,6 +42,7 @@ public class PageController {
 		void setWidth(int width);
 		void setHeight(int height);
 		void removeAllModules();
+		HashMap<String, Widget> getWidgets();
 	}
 
 	private IPageDisplay pageView;
@@ -51,8 +53,14 @@ public class PageController {
 	private ArrayList<IPresenter> presenters;
 	private final ScriptingEngine scriptingEngine = new ScriptingEngine();
 	private IPlayerController playerController;
-	private HandlerRegistration valueChangedHandler;	
+	private HandlerRegistration valueChangedHandler;
+	private KeyboardNavigationController keyboardController;
+	private PageType pageType;
 
+	public enum PageType {
+		main, book, header, footer
+	}
+	
 	public PageController(IPlayerController playerController) {
 		this.playerController = playerController;
 		playerServiceImpl = new PlayerServices(playerController, this);
@@ -90,7 +98,6 @@ public class PageController {
 			valueChangedHandler = null;
 		}
 	}
-<<<<<<< HEAD
 	
 	public void setKeyboardController(KeyboardNavigationController kc, PageType pageType) {
 		this.keyboardController = kc;
@@ -101,9 +108,6 @@ public class PageController {
 		return pageType;
 	}
 	
-=======
-
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
 	public void setPage(Page page) {
 		if (playerServiceImpl != null) {
 			playerServiceImpl.resetEventBus();
@@ -117,7 +121,6 @@ public class PageController {
 			setPageState(state);
 		}
 		pageView.refreshMathJax();
-<<<<<<< HEAD
 
 		String prefix = "";
 		if (pageType == PageType.footer) {
@@ -131,8 +134,6 @@ public class PageController {
 			keyboardController.addToNavigation(pageView.getWidgets(), presenters, prefix);
 		}
 		
-=======
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
 		playerService.getEventBus().fireEvent(new PageLoadedEvent(page.getName()));
 	}
 
@@ -394,14 +395,11 @@ public class PageController {
 	}
 
 	public void closePage() {
-<<<<<<< HEAD
 		// kc in popup window is null
 		if (keyboardController != null) {
 			keyboardController.resetStatus();
 		}
 		
-=======
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
 		if (playerServiceImpl != null) {
 			playerServiceImpl.resetEventBus();
 		}
