@@ -955,7 +955,6 @@ hr, table, fieldset {
 	z-index: 100;
 	bottom: 0;
 }
-<<<<<<< HEAD
 
 .ic_selected_module {
 	border: 2px solid rgba(27,144,253,1) !important;
@@ -973,5 +972,3 @@ hr, table, fieldset {
 	border: 1px solid black;
 }
 }
-=======
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
