@@ -21,10 +21,6 @@ public class PresenterTestCase {
 		public void setData(int value) {
 			this.value = value;
 		}
-<<<<<<< HEAD
-=======
-
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
 	}
 
 	
