@@ -118,13 +118,10 @@ public class ChoiceViewMockup implements IDisplay, IOptionMockupListener {
 		
 	}
 
-<<<<<<< HEAD
 
 	@Override
 	public void executeOnKeyCode(KeyDownEvent event) {
 		// TODO Auto-generated method stub
 		
 	}
-=======
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
 }
