@@ -40,10 +40,6 @@ public class PresenterTestCase {
 			// TODO Auto-generated method stub
 			return null;
 		}
-<<<<<<< HEAD
-=======
-
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
 	}
 
 	
