@@ -89,8 +89,4 @@ public class OrderingViewMockup implements OrderingPresenter.IDisplay {
 		// TODO Auto-generated method stub
 		
 	}
-<<<<<<< HEAD
-=======
-
->>>>>>> 1a4d29499a61b38702006c62b190961a45d12ba3
 }
