@@ -1,7 +1,9 @@
 package com.lorepo.icplayer.client.page.mockup;
 
 import java.util.ArrayList;
+import java.util.HashMap;
 
+import com.google.gwt.user.client.ui.Widget;
 import com.lorepo.icplayer.client.model.Page;
 import com.lorepo.icplayer.client.module.api.IModuleModel;
 import com.lorepo.icplayer.client.module.api.IModuleView;
@@ -69,5 +71,12 @@ public class PageViewMockup implements IPageDisplay {
 	@Override
 	public void removeAllModules() {
 		views.clear();
+	}
+
+
+	@Override
+	public HashMap<String, Widget> getWidgets() {
+		// TODO Auto-generated method stub
+		return null;
 	}
 }
